@@ -1,12 +1,0 @@
-#Contributing to Patternlab - Node
-If you'd like to contribute to patternlab - node, please do so! There is always a lot of ground to cover, with patternlab - php being so feature-rich.  
-
-No pull request is too small. Check out any [up for grabs issues](https://github.com/pattern-lab/patternlab-node/labels/up%20for%20grabs) as a good way to get your feet wet. 
-
-##Guidelines
-1. Please keep your pull requests concise and limited to **ONE** substantive change at a time.
-2. _ALWAYS_ submit pull requests against the [dev branch](https://github.com/pattern-lab/patternlab-node/tree/dev). If this does not occur, I will first, try to redirect you gently, second, port over your contribution manually if time allows, and/or third, close your pull request.
-3. If you can, add some unit tests using the existing patterns
-
-##Coding style
-Regarding code style like indentation and whitespace, follow the conventions you see used in the source already. Add enough source code comments to help the next person.
